--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background: white; 
 }
 
-p {
+p {	margin-top: 5rem;
 	margin-bottom: 5rem;
 }
 
@@ -47,7 +47,7 @@ h1 {
 
 .container {
 	position: absolute;
-	width: 30%;
+	width: 100px;
 	height: 100vh;
 	padding: 0.5rem;
 	overflow: hidden;
