--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-	background-color: #d8d8d8;
+	background-color: #fff;
 	font-family: 'Gothic A1', sans-serif;
 	font-size: 12px;
 	font-weight: 400;
