--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html,
 body {
-	background-color: #fff;
-	font-family: 'Gothic A1', sans-serif;
+	background-color: #f9f9f9;
+	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size: 12px;
 	font-weight: 400;
-	line-height: auto;
+	line-height: 1.3;
 	margin: 0;
 	padding: 0
 	overflow: hidden;
@@ -14,13 +14,13 @@ body {
   background: white; 
 }
 
-p {	margin-top: 5rem;
+p {	
 	margin-bottom: 5rem;
 }
 
 a {
 	color: #000;
-	font-family: Times New Roman;
+	font-family: 'Playfair Display', serif;
 	font-weight: 300;
 	text-decoration: none;
 	cursor: pointer;
@@ -43,6 +43,12 @@ li {
 
 h1 {
 	font-size: 30px;
+}
+
+button {
+	background-color: #fff;
+	border: 1px solid #000;
+	padding: 5px 20px 5px 20px;
 }
 
 .container {
