--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-	background-color: #f9f9f9;
+	background-color: #efefef;
 	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size: 12px;
 	font-weight: 400;
