--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ p {
 
 a {
 	color: #000;
-	font-family: 'Playfair Display', serif;
+	font-family: 'times new roman', serif;
 	font-weight: 300;
 	text-decoration: none;
 	cursor: pointer;
