--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 html,
 body {
 	background-color: #fff;
@@ -14,13 +20,19 @@ body {
   background: white; 
 }
 
+img {
+	width: 25rem;
+	padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+}
+
 p {	
-	margin-bottom: 5rem;
+	
 }
 
 a {
 	color: #000;
 	font-family: 'times new roman', serif;
+	font-size: 13px;
 	font-weight: 300;
 	text-decoration: none;
 	cursor: pointer;
@@ -41,31 +53,10 @@ li {
 	margin: 0;
 }
 
-h1 {
-	font-size: 30px;
-}
-
-button {
-	background-color: #fff;
-	border: 1px solid #000;
-	padding: 5px 20px 5px 20px;
-}
-
 .container {
-	position: absolute;
 	width: 100px;
-	height: 100vh;
 	padding: 0.5rem;
 	overflow: hidden;
 	box-sizing: border-box;
 }
 
-
-.arena {
-	width: 30px;
-}
-
-.arena:hover {
-	opacity: 0.2;
-	cursor: pointer;
-}
