--- a/style.css
+++ b/style.css
@@ -6,13 +6,15 @@
 
 html,
 body {
-	background-color: #fff;
+	background-color: black;
+	color: #666666;
 	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-size: 12px;
+	font-size: 30px;
 	font-weight: 400;
+	text-transform: uppercase;
 	line-height: 1.3;
 	margin: 0;
-	padding: 0
+	padding: 0.5rem 0.25rem 0.5rem 0.5rem;
 	overflow: hidden;
 }
 
@@ -20,26 +22,19 @@ body {
   background: white; 
 }
 
-img {
-	width: 25rem;
-	padding: 0.25rem 0.5rem 0.25rem 0.5rem;
-}
-
 p {	
 	
 }
 
 a {
-	color: #000;
-	font-family: 'times new roman', serif;
-	font-size: 13px;
-	font-weight: 300;
+	color: #666666;
+	text-transform: none;
 	text-decoration: none;
 	cursor: pointer;
 }
 
 a:visited {
-	color: #000;
+	color: #666666;
 }
 
 ul {
@@ -54,9 +49,37 @@ li {
 }
 
 .container {
-	width: 100px;
-	padding: 0.5rem;
+	width: 100%;
 	overflow: hidden;
 	box-sizing: border-box;
 }
+
+.info {
+	margin-bottom: 1rem;
+}
+
+.links {
+	font-size: 20px;
+	margin-bottom: 0.5rem;
+}
+
+.links-left {
+	width: 5%;
+	height: 100%;
+	float: left;
+
+}
+
+.links-right {
+	width: 95%;
+	height: 100%;
+	float: left;
+
+}
+
+
+
+
+
+
 
