--- a/style.css
+++ b/style.css
@@ -58,8 +58,9 @@ li {
 	margin-bottom: 1rem;
 }
 
-.links {
+.links a {
 	font-size: 20px;
+	text-transform: uppercase;
 	margin-bottom: 0.5rem;
 }
 
