--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ li {
 }
 
 .links-left {
+	background-color: blue;
 	width: 3rem;
 	height: 100%;
 	float: left;
@@ -76,6 +77,7 @@ li {
 }
 
 .links-right {
+	background-color: red;
 	width: 6rem;
 	height: 100%;
 	float: left;
