--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@ li {
 
 .links {
 	font-size: 20px;
-	margin-bottom: 0.5rem;
 }
 
 .links a {
@@ -70,15 +69,14 @@ li {
 
 .links-left {
 	background-color: blue;
-	width: 3rem;
 	height: 100%;
+	margin-right: 0.25rem;
 	float: left;
 
 }
 
 .links-right {
 	background-color: red;
-	width: 6rem;
 	height: 100%;
 	float: left;
 
