--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-	background-color: black;
+	background-color: #e2e8f0;
 	color: #666666;
 	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size: 30px;
