--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@
 html,
 body {
 	background-color: #e2e8f0;
-	color: #666666;
-	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-size: 30px;
+	font-family: 'Libre Baskerville', 'Times New Roman', Serif;
+	font-size: 16px;
 	font-weight: 400;
 	text-transform: uppercase;
 	line-height: 1.3;
@@ -65,12 +64,10 @@ li {
 .links a {
 	font-family: Helvetica Neue;
 	text-transform: uppercase;
-	color: #666666;
 
 }
 
 .links a:visited {
-	color: #666666;
 }
 
 .links-left {
