--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-	background-color: #e2e8f0;
+	background-color: #f8f8f8;
 	font-family: 'Libre Baskerville', 'Times New Roman', Serif;
 	font-size: 12px;
 	font-weight: 400;
