--- a/style.css
+++ b/style.css
@@ -11,10 +11,9 @@ body {
 	font-size: 12px;
 	font-weight: 400;
 	text-transform: uppercase;
-	line-height: 1.3;
-	margin: 0;
-	padding: 0.5rem 0.25rem 0.5rem 0.5rem;
-	overflow: hidden;
+	line-height: 1.5;
+	height: 100%;
+  	padding: 6rem;
 }
 
 ::selection {
@@ -48,17 +47,13 @@ li {
 }
 
 .container {
-	width: 100%;
+	width: 25rem;
+	height: 100%;
+	border: 1px solid #000;
+	border-radius: 1rem;
+	margin: 0 auto;
 	overflow: hidden;
-	box-sizing: border-box;
-}
-
-.project-number {
-	font-size: 1rem;
-}
-
-.project-title {
-	margin-left: 1rem;
+	
 }
 
 
