--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 html,
 body {
+	position: relative;
 	background-color: #f8f8f8;
 	font-family: "Helvetica Neue", Sans-Serif;
 	font-size: 12px;
@@ -13,7 +14,6 @@ body {
 	text-transform: uppercase;
 	line-height: 1.5;
 	height: 100%;
-  	padding: 6rem;
 }
 
 ::selection {
@@ -47,13 +47,16 @@ li {
 }
 
 .container {
+	position: absolute;
 	width: 25rem;
-	height: 100%;
+	height: 50rem;
 	border: 1px solid #000;
 	border-radius: 1rem;
 	padding: 1.5rem;
-	margin: 0 auto;
-	overflow: hidden;
+
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	
 }
 
